--- a/hello.html
+++ b/hello.html
@@ -1,20 +1,7 @@
 <html>
   <body>
     <h1>
-      Hello.
-      <br><br>
-      Hallo.
-      <br><br>
-      Konnichiwa.
-      <br><br>
-      Annyeonghaseo.
-      <br><br>
-      Hola.
-      <br><br>
-      Ni hao.
-      <br><br>
-      Bonjour.
-      <br><br>
+      Heelo, Microprocessors World!
     </h1>
   </body>
 </html>
